Fix input style on ios devices

--- a/styles/token-input-facebook.css
+++ b/styles/token-input-facebook.css
@@ -23,6 +23,7 @@ ul.token-input-list-facebook li input {
     padding: 3px 8px;
     background-color: white;
     margin: 2px 0;
+    -webkit-appearance: caret;
 }
 
 li.token-input-token-facebook {
